# CycleCast

./: .gitignore  README.md  Version-PRD.md  code-refactor.md  code-review-26-03-18.md  deploy.sh  performance-prd-26-03-19.md  performance-review-26-03-19.md
backend/: main.py  pyproject.toml  run.sh
cyclecast/: index.html  package-lock.json  package.json  run.sh  vite.config.ts
cyclecast/public/: manifest.json
cyclecast/src/: App.tsx  AppContent.tsx  main.tsx
cyclecast/src/components/: BikePlayView.tsx  ConfigView.tsx  DownloadManager.tsx  HomeView.tsx  SearchPodcasts.tsx
cyclecast/src/config/: playerConfig.ts
cyclecast/src/context/: AudioContext.tsx
cyclecast/src/hooks/: useAudioPlayer.ts  useEpisodeDownload.ts  useMediaSession.ts  usePlayback.ts  useVersionCheck.ts  useWakeLock.ts
cyclecast/src/utils/: format.ts  storage.ts
